--- a/styles/global.css
+++ b/styles/global.css
@@ -26,10 +26,72 @@ header {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+header h1 {
+    font-size: 1.5rem;
+}
+
 header .logo {
     height: 100%;
 }
 
+* {
+    border: solid 3px orange;
+}
+
+div {
+    border: solid 1px black;
+}
+
 main {
-    padding: 20px;
+    width: 940px;
+    margin: 0 auto;
+    height: 700px;
+    display: grid;
+    grid-template-rows: 10% 30% 5% 50% 10%;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.featured {
+    display: grid;
+    grid-template-columns: 20% 20% 60%;
+}
+
+.trending-header {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.trending {
+    display: grid;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    justify-content: space-around;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.navbar {
+    display: grid;
+    grid-template-rows: 50% 50%;
+    text-align: center;
+}
+
+.cart {
+    text-align: right;
+}
+
+.featured-title {
+    padding-left: 20px;
+    padding-top: 60px;
 }
