--- a/styles/global.css
+++ b/styles/global.css
@@ -47,12 +47,12 @@ main {
     margin: 0 auto;
     height: 700px;
     display: grid;
-    grid-template-rows: 10% 30% 5% 50% 10%;
+    grid-template-rows: 10% 28% 5% 50% 7%;
 }
 
 .header {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 25% 50% 25%;
 }
 
 .featured {
@@ -78,7 +78,7 @@ main {
 
 .footer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr 2fr;
 }
 
 .navbar {
@@ -94,4 +94,37 @@ main {
 .featured-title {
     padding-left: 20px;
     padding-top: 60px;
+}
+
+.fast {
+    padding-top: 10px;
+    padding-right: 30px;
+    text-align: right;
+}
+
+.safe {
+    padding-top: 10px;
+    text-align: center;
+}
+
+.support {
+    padding-top: 10px;
+    text-align: center;
+}
+
+.trust {
+    padding-top: 10px;
+    padding-left: 40px;
+    text-align: left;
+}
+
+.trending-text {
+    padding-top: 4px;
+    padding-left: 150px;
+}
+
+.view-all {
+    padding-top: 4px;
+    padding-right: 120px;
+    text-align: right;
 }
